updated index and style

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
   <div id="bg-img"></div>
   <!-- About option display the detail about myself, links to Github, linkedin and Resume -->
   <div id="About">
-    <div class="container p-0">
-      <div class="row frontdiv">
-        <div class="col">
+    <div class="container p-0" >
+      <div class="row " >
+        <div class="col" >
           <div id="AboutMe">
-            <div class="card bg-white">
+            <div class="card" style="background-color: #d8e6e7;">
               <div class="card-title my-5">
                 <div class="media">
                   <img src="img/about.jpeg" width="250" height="250" class="rounded-circle mx-5 d-none d-lg-block ">
@@ -105,9 +105,9 @@
   </div>
   <!-- Project option display the detail about Project assignment and homework assignment completed -->
   <section class="container">
-    <div class="row">
-      <div class="col mt-4 card">
-        <div class="card-body">
+    <div class="row" >
+      <div class="col mt-4 card" style="background-color: #d8e6e7;">
+        <div class="card-body" >
           <h3 id=Projects> Projects</h3>
           <hr class="bg-info">
           <section class="row justify-content-center">
@@ -131,7 +131,7 @@
   </section>
   <section class="container">
     <div class="row">
-      <div class="col mt-4 card" style="width: 18rem;">
+      <div class="col mt-4 card" style="width: 18rem; background-color: #d8e6e7;">
         <div class="card-body">
           <h3 id=Projects> Homework Projects</h3>
           <hr class="bg-info">
