added burger app asisgnemnt

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <h3 id=Projects> Homework Projects</h3>
           <hr class="bg-info">
           <section class="row">
-            <div class="text-white col-md-4  mb-4 mt-4 my-2 mx-2 ml-4 p-0">
+            <div class="text-white col-md-5  mb-4 mt-4 my-2 mx-2 ml-4 p-0">
               <a href="https://mathigayathri2001.github.io/Weatherdashboard/" target="_blank">
                 <img src="img/HW1.jpg" class="card-img">
                 <div class="card-img-text">
@@ -149,7 +149,7 @@
                 </p>
               </div>
             </div>
-            <div class="text-white col-md-4  mb-4 mt-4 my-2 mx-2 ml-4 p-0">
+            <div class="text-white col-md-5  mb-4 mt-4 my-2 mx-2 ml-4 p-0">
               <a href="https://mathigayathri2001.github.io/scheduler-event/" target="_blank">
                 <img src="img/HW2.jpg" class="card-img">
                 <div class="card-img-text">
@@ -162,7 +162,7 @@
                 </p>
               </div>
             </div>
-            <div class="text-white col-md-4  mb-4 mt-4 my-2 mx-2 ml-4 p-0">
+            <div class="text-white col-md-5  mb-4 mt-4 my-2 mx-2 ml-4 p-0">
               <a href="https://drive.google.com/file/d/1cgCjyuKAaUH6Gu3vMd6bkkim3fKQOjEC/view" target="_blank">
                 <img src="img/HW3.jpg" class="card-img">
                 <div class="card-img-text">
@@ -172,6 +172,19 @@
               <div class="text-center">
                 <p class="repolink">
                   <a href="https://github.com/mathigayathri2001/Team_Generator" target="_blank">Github repo </a>
+                </p>
+              </div>
+            </div>
+            <div class="text-white col-md-5  mb-4 mt-4 my-2 mx-2 ml-4 p-0">
+              <a href="https://whispering-beyond-14560.herokuapp.com/" target="_blank">
+                <img src="img/burger.jpg" class="card-img">
+                <div class="card-img-text">
+                  <p class="card-text text-center text-block">burger_app</p>
+                </div>
+              </a>
+              <div class="text-center">
+                <p class="repolink">
+                  <a href="https://github.com/mathigayathri2001/burger_app" target="_blank">Github repo </a>
                 </p>
               </div>
             </div>
